code/typescript/StreetAccountNews/v0/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# StreetAccount News client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v0.1.0-blue)](https://developer.factset.com/api-catalog/streetaccount-news-api)
[![npm](https://img.shields.io/npm/v/@factset/sdk-streetaccountnews)](https://www.npmjs.com/package/@factset/sdk-streetaccountnews)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

The StreetAccount News API provides access to FactSet's proprietary news provider, StreetAccount. StreetAccount, is a premium real-time market intelligence news service that delivers comprehensive U.S., Canadian, and European coverage (and expanding Asia coverage). All possible sources for corporate news are scanned and key story facts are highlighted and presented in an easy-to-read format.

**StreetAccount Filters, Headlines, and Views:**

These endpoints allow for the retrieval of news headlines using filters such as Watchlists/Indices/Tickers, Company Filters, Market Topics, Regions, and Sectors.  Headlines can also be retrieved based on saved views within the Workstation.

**StreetAccount Historical Stories:**

These endpoints provide access to historical StreetAccount (SA) news. The API delivers SA stories in XML format based on user-specified date input parameters. Output files are securely available to users through a URL. This API has three endpoints: Request Files, Check Status, and Get Files.

Please note that this API only supports adhoc requests for historical files and does not support real-time files. If real-time push is required, consider using other methods such as SFTP, QNT account, or Azure Storage. Both historical and real-time Street Account news can be delivered via SFTP, QNT account, or Azure Storage.

The files delivered contain both metadata and content body, eliminating the need for multiple requests through multiple services to retrieve all the information.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.1.0
- SDK version: 0.20.3
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 14

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-streetaccountnews@0.20.3
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-streetaccountnews@0.20.3
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=14. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 16
      nvm use 16
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, FiltersApi } = require('@factset/sdk-streetaccountnews');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new FiltersApi();
const opts = {
  'structured': true, // Boolean | Pass structured to generate a structured view of the available filters.
  'flattened': true // Boolean | Pass flattened to generate a structured view of the available filters.
};

// Call api endpoint
apiInstance.getStreetAccountFilters(opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/research/news/v0*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*streetaccountnews.FiltersApi* | [**getStreetAccountFilters**](docs/FiltersApi.md#getStreetAccountFilters) | **GET** /streetaccount/filters | Retrieve all StreetAccount filters
*streetaccountnews.HeadlinesApi* | [**getStreetAccountHeadlines**](docs/HeadlinesApi.md#getStreetAccountHeadlines) | **POST** /streetaccount/headlines | Retrieve StreetAccount headlines for given filters
*streetaccountnews.HeadlinesApi* | [**getStreetAccountHeadlinesByView**](docs/HeadlinesApi.md#getStreetAccountHeadlinesByView) | **POST** /streetaccount/views/{id}/headlines | Retrieve StreetAccount headlines for given view
*streetaccountnews.StreetAccountHistoricalStoriesApi* | [**streetaccountHistoricalCheckStatusGet**](docs/StreetAccountHistoricalStoriesApi.md#streetaccountHistoricalCheckStatusGet) | **GET** /streetaccount/historical/check-status | Returns the status and percentage of completion for the requested jobID
*streetaccountnews.StreetAccountHistoricalStoriesApi* | [**streetaccountHistoricalGetFilesGet**](docs/StreetAccountHistoricalStoriesApi.md#streetaccountHistoricalGetFilesGet) | **GET** /streetaccount/historical/get-files | Returns the StreetAccount XML files for the specified date range
*streetaccountnews.StreetAccountHistoricalStoriesApi* | [**streetaccountHistoricalRequestFilesGet**](docs/StreetAccountHistoricalStoriesApi.md#streetaccountHistoricalRequestFilesGet) | **GET** /streetaccount/historical/request-files | Returns the jobID
*streetaccountnews.ViewsApi* | [**createStreetAccountView**](docs/ViewsApi.md#createStreetAccountView) | **POST** /streetaccount/views/{id} | Creates and saves a StreetAccount view
*streetaccountnews.ViewsApi* | [**deleteStreetAccountView**](docs/ViewsApi.md#deleteStreetAccountView) | **DELETE** /streetaccount/views/{id} | Deletes an existing StreetAccount view
*streetaccountnews.ViewsApi* | [**editStreetAccountView**](docs/ViewsApi.md#editStreetAccountView) | **PUT** /streetaccount/views/{id} | Edits and saves an existing StreetAccount view
*streetaccountnews.ViewsApi* | [**getStreetAccountViews**](docs/ViewsApi.md#getStreetAccountViews) | **GET** /streetaccount/views | Retrieves StreetAccount search views


## Documentation for Models

 - [streetaccountnews.Checkstatus](docs/Checkstatus.md)
 - [streetaccountnews.CheckstatusResponse](docs/CheckstatusResponse.md)
 - [streetaccountnews.CreateEditDeleteViewResponse](docs/CreateEditDeleteViewResponse.md)
 - [streetaccountnews.CreateEditDeleteViewResponseData](docs/CreateEditDeleteViewResponseData.md)
 - [streetaccountnews.CreateEditDeleteViewResponseDataMessage](docs/CreateEditDeleteViewResponseDataMessage.md)
 - [streetaccountnews.CreateOrEditViewBody](docs/CreateOrEditViewBody.md)
 - [streetaccountnews.CreateOrEditViewBodyData](docs/CreateOrEditViewBodyData.md)
 - [streetaccountnews.CreateOrEditViewTickers](docs/CreateOrEditViewTickers.md)
 - [streetaccountnews.Error](docs/Error.md)
 - [streetaccountnews.ErrorObject](docs/ErrorObject.md)
 - [streetaccountnews.FilterResponse](docs/FilterResponse.md)
 - [streetaccountnews.FilterResponseData](docs/FilterResponseData.md)
 - [streetaccountnews.FlattenedFilters](docs/FlattenedFilters.md)
 - [streetaccountnews.FlattenedFiltersCategoriesObject](docs/FlattenedFiltersCategoriesObject.md)
 - [streetaccountnews.FlattenedFiltersRegionsObject](docs/FlattenedFiltersRegionsObject.md)
 - [streetaccountnews.FlattenedFiltersSectorsObject](docs/FlattenedFiltersSectorsObject.md)
 - [streetaccountnews.FlattenedFiltersTopicsObject](docs/FlattenedFiltersTopicsObject.md)
 - [streetaccountnews.FlattenedFiltersWatchlistsObject](docs/FlattenedFiltersWatchlistsObject.md)
 - [streetaccountnews.Getfiles](docs/Getfiles.md)
 - [streetaccountnews.GetfilesResponse](docs/GetfilesResponse.md)
 - [streetaccountnews.IsPartialOne](docs/IsPartialOne.md)
 - [streetaccountnews.MetaOne](docs/MetaOne.md)
 - [streetaccountnews.PaginationOne](docs/PaginationOne.md)
 - [streetaccountnews.RequestfilesResponse](docs/RequestfilesResponse.md)
 - [streetaccountnews.SaHeadlinesRequest](docs/SaHeadlinesRequest.md)
 - [streetaccountnews.SaHeadlinesRequestByView](docs/SaHeadlinesRequestByView.md)
 - [streetaccountnews.SaHeadlinesRequestByViewData](docs/SaHeadlinesRequestByViewData.md)
 - [streetaccountnews.SaHeadlinesRequestData](docs/SaHeadlinesRequestData.md)
 - [streetaccountnews.SaHeadlinesRequestDataSearchDate](docs/SaHeadlinesRequestDataSearchDate.md)
 - [streetaccountnews.SaHeadlinesRequestMeta](docs/SaHeadlinesRequestMeta.md)
 - [streetaccountnews.SaHeadlinesRequestMetaPagination](docs/SaHeadlinesRequestMetaPagination.md)
 - [streetaccountnews.SaHeadlinesRequestTickersObject](docs/SaHeadlinesRequestTickersObject.md)
 - [streetaccountnews.SearchResponse](docs/SearchResponse.md)
 - [streetaccountnews.SearchResponseArrayObject](docs/SearchResponseArrayObject.md)
 - [streetaccountnews.SearchResponseData](docs/SearchResponseData.md)
 - [streetaccountnews.SearchResponseMeta](docs/SearchResponseMeta.md)
 - [streetaccountnews.SearchResponseMetaPagination](docs/SearchResponseMetaPagination.md)
 - [streetaccountnews.StreetAccountStatus](docs/StreetAccountStatus.md)
 - [streetaccountnews.StructuredFilters](docs/StructuredFilters.md)
 - [streetaccountnews.StructuredFiltersCategoriesObject](docs/StructuredFiltersCategoriesObject.md)
 - [streetaccountnews.StructuredFiltersChildrenObject](docs/StructuredFiltersChildrenObject.md)
 - [streetaccountnews.StructuredFiltersRegionsObject](docs/StructuredFiltersRegionsObject.md)
 - [streetaccountnews.StructuredFiltersSectorsObject](docs/StructuredFiltersSectorsObject.md)
 - [streetaccountnews.StructuredFiltersTopicsObject](docs/StructuredFiltersTopicsObject.md)
 - [streetaccountnews.StructuredFiltersWatchlistsObject](docs/StructuredFiltersWatchlistsObject.md)
 - [streetaccountnews.Views](docs/Views.md)
 - [streetaccountnews.ViewsObject](docs/ViewsObject.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
